# stotify

./: CLAUDE.md  Makefile  README.md  alerts.json  main.py  pyproject.toml  st_backtest_app.py  streamlit_app.py
.github/workflows/: check_stocks.yml  check_stocks_daily.yml  list_topics.yml  test.yml
docs/: PRD.md  complete.md  future.md  prd-custom-notification-groups.md
scripts/: list_topics.py
stotify/: backtest.py  main.py  market_hours.py  notifier.py  stock.py  strategies.py
tests/: test_backtest.py  test_main.py  test_market_hours.py  test_notifier.py  test_stock.py  test_strategies.py
